2014-08-01 Roman
- FIX:Special.FLibSYS: strDec4Bin() function fix and expand by separator argument into default value " ", for compatibility restore.
- FIX:UI.{QTCfg,Vision}: Global wait cursor restore fix at the window close.
- !!!:UI.VCAEngine: Access to project's session time table unified by append the session attributes access functions sessAttr(), sessAttrSet().
    The functions used to: primitive "Document", session's Style, edited resources by user's API functions "mime()" and "mimeSet()",
	"fromSess" and "toSess" user's API functions "attr()" and "attrSet()".
    Service "/serv/attrSess/" is added for access to session's attributes.
- !!!:UI.Vision: Run time window's position control and save is added by option "winPosCntrSave" enable and using new service "/serv/attrSess/".
    Screen number expanded for not only assign to different physical display and for independent position control and save.


2014-07-31 Roman
- !:DAQ.DAQGate: Remote source's messages acquisition disabling is added, for request time control.
    FIX: Processed parameters list clean up moved from stop to disable stage.
    Pass empty parameter into separated atributes request mode is added, for traffic and overall request time decrease.
    Some requests profiled: Into common priority request's and respond's reaction is 3-8ms, into RealTime priority (10) it is 50-100us.
- UI.{QTCfg,Vision}: Wait cursor set moved to already set and restore only after timeout 50 ms, for blink prevent and some DE load by that.
- UI.Vision: The project manual call, also from status panel, is added by offline document name "{ProjName}.{pdf|html|odt}.


2014-07-25 Roman
- FIX:UI.Vision: Force set Cap policy to Qt::FlatCap for primitive Diagram's paint, mostly for workaround visible defects here on Qt5.
    Ticks lost for Slider view and related views deffects of primitive FormEl at press to the elements' container widget